feat(i18n): Integrated i18n translations for 'welcome' page titles and descriptions in AZ, EN, TR, RU.

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -27,5 +27,28 @@
   "redirecting": "Yönləndirilir",
   "discover": "Kəşf et",
   "messages": "Mesajlar",
-  "create_account": "Hesab yaradın və unikal platformamıza qoşulun."
+  "create_account": "Hesab yaradın və unikal platformamıza qoşulun.",
+  "chat_wave": "Çat Dalğası",
+  "connect_instantly": "Dərhal qoşul",
+  "real_time_messaging": "Dostlarla real vaxtda mesajlaşma",
+  "secure_private": "Təhlükəsiz və gizli",
+  "conversations_protected": "Söhbətləriniz qorunur və şifrələnir",
+  "join_and_meet": "Qoşul və görüş",
+  "skip": "Atla",
+  "continue": "Davam et",
+  "login_welcome": "Söhbətlərinizə geri xoş gəlmisiniz",
+  "login_google": "Google ilə davam et",
+  "login_github": "GitHub ilə davam et",
+  "login_or_email": "Və ya email ilə davam et",
+  "login_email_label": "Email",
+  "login_email_placeholder": "Email və ya istifadəçi adını daxil edin",
+  "login_password_label": "Şifrə",
+  "login_password_placeholder": "Şifrəni daxil edin",
+  "login_remember": "Məni xatırla",
+  "login_forgot": "Şifrəni unutmusunuz?",
+  "login_signin": "Daxil ol",
+  "login_no_account": "Hesabınız yoxdur?",
+  "login_create_now": "İndi yaradın",
+  "login_title": "Çat Dalğası",
+  "login_success": "İstifadəçi uğurla daxil oldu"
 }
