--- a/client/src/i18n/locales/en/translation.json
+++ b/client/src/i18n/locales/en/translation.json
@@ -27,5 +27,28 @@
   "redirecting": "Redirecting",
   "discover": "Discover",
   "messages": "Messages",
-  "create_account": "Create your account and join our unique platform."
+  "create_account": "Create your account and join our unique platform.",
+  "chat_wave": "Chat Wave",
+  "connect_instantly": "Connect Instantly",
+  "real_time_messaging": "Real-time messaging with friends",
+  "secure_private": "Secure & Private",
+  "conversations_protected": "Your conversations are protected and encrypted",
+  "join_and_meet": "Join and Meet",
+  "skip": "Skip",
+  "continue": "Continue",
+  "login_welcome": "Welcome back to your conversations",
+  "login_google": "Continue with Google",
+  "login_github": "Continue with GitHub",
+  "login_or_email": "Or continue with email",
+  "login_email_label": "Email",
+  "login_email_placeholder": "Enter email or username",
+  "login_password_label": "Password",
+  "login_password_placeholder": "Enter password",
+  "login_remember": "Remember me",
+  "login_forgot": "Forgot password?",
+  "login_signin": "Sign In",
+  "login_no_account": "Don't have an account?",
+  "login_create_now": "Create one now",
+  "login_title": "Chat Wave",
+  "login_success": "User successfully login"
 }
