--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -27,5 +27,28 @@
   "redirecting": "Перенаправление",
   "discover": "Обзор",
   "messages": "Сообщения",
-  "create_account": "Создайте аккаунт и присоединяйтесь к нашей уникальной платформе."
+  "create_account": "Создайте аккаунт и присоединяйтесь к нашей уникальной платформе.",
+  "chat_wave": "Чат Волна",
+  "connect_instantly": "Подключайтесь мгновенно",
+  "real_time_messaging": "Обмен сообщениями в реальном времени с друзьями",
+  "secure_private": "Безопасно и конфиденциально",
+  "conversations_protected": "Ваши разговоры защищены и зашифрованы",
+  "join_and_meet": "Присоединяйтесь и встречайтесь",
+  "skip": "Пропустить",
+  "continue": "Продолжить",
+  "login_welcome": "С возвращением к вашим беседам",
+  "login_google": "Продолжить с Google",
+  "login_github": "Продолжить с GitHub",
+  "login_or_email": "Или продолжить с электронной почтой",
+  "login_email_label": "Электронная почта",
+  "login_email_placeholder": "Введите email или имя пользователя",
+  "login_password_label": "Пароль",
+  "login_password_placeholder": "Введите пароль",
+  "login_remember": "Запомнить меня",
+  "login_forgot": "Забыли пароль?",
+  "login_signin": "Войти",
+  "login_no_account": "Нет аккаунта?",
+  "login_create_now": "Создать сейчас",
+  "login_title": "Чат Волна",
+  "login_success": "Пользователь успешно вошел"
 }
