--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -27,5 +27,29 @@
   "redirecting": "Yönlendiriliyor",
   "discover": "Keşfet",
   "messages": "Mesajlar",
-  "create_account": "Hesabını oluştur ve eşsiz platformumuza katıl."
+  "create_account": "Hesabını oluştur ve eşsiz platformumuza katıl.",
+  "chat_wave": "Sohbet Dalgası",
+  "connect_instantly": "Anında Bağlantı",
+  "real_time_messaging": "Arkadaşlarla anlık mesajlaşma",
+  "secure_private": "Güvenli ve Özel",
+  "conversations_protected": "Sohbetleriniz korunur ve şifrelenir",
+  "join_and_meet": "Katıl ve Tanış",
+  "skip": "Atla",
+  "next": "Sonraki",
+  "continue": "Devam et",
+  "login_welcome": "Sohbetlerinize tekrar hoş geldiniz",
+  "login_google": "Google ile devam et",
+  "login_github": "GitHub ile devam et",
+  "login_or_email": "Veya e-posta ile devam et",
+  "login_email_label": "E-posta",
+  "login_email_placeholder": "E-posta veya kullanıcı adını girin",
+  "login_password_label": "Şifre",
+  "login_password_placeholder": "Şifrenizi girin",
+  "login_remember": "Beni hatırla",
+  "login_forgot": "Şifreni mi unuttun?",
+  "login_signin": "Giriş yap",
+  "login_no_account": "Hesabınız yok mu?",
+  "login_create_now": "Şimdi oluştur",
+  "login_title": "Sohbet Dalgası",
+  "login_success": "Kullanıcı başarıyla giriş yaptı"
 }
