feat(i18n): Added i18n translations for register page

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -50,5 +50,46 @@
   "login_no_account": "Hesabınız yoxdur?",
   "login_create_now": "İndi yaradın",
   "login_title": "Çat Dalğası",
-  "login_success": "İstifadəçi uğurla daxil oldu"
+  "login_success": "İstifadəçi uğurla daxil oldu",
+  "register_title": "Çat Dalğası",
+  "register_subtitle": "Hesab yaradın və unikal platformamıza qoşulun.",
+  "register_step1_title": "Haradansınız?",
+  "register_step1_subtitle": "Sizi yaxınlıqdakı insanlarla əlaqələndirməyə kömək edin",
+  "register_step2_title": "Maraqlarınız nələrdir?",
+  "register_step2_subtitle": "Təcrübənizi fərdiləşdirmək üçün 3-5 maraq seçin",
+  "register_step2_selected": "Seçildi: {{count}}/5 (minimum 3 tələb olunur)",
+  "register_step2_back": "Geri",
+  "register_step2_continue": "Davam et",
+  "register_step3_title": "Doğum gününüz nə vaxtdır?",
+  "register_step3_subtitle": "Yaşınız sizi doğru insanlarla əlaqələndirməyə kömək edəcək",
+  "register_step3_label": "Doğum gününüzü seçin",
+  "register_step3_age": "Yaş: {{age}} yaş",
+  "register_step3_born": "Doğum tarixi: {{date}}",
+  "register_step4_title": "Hesabınızı yaradın",
+  "register_step4_subtitle": "Demək olar ki, bitdi! Bir neçə detal qaldı",
+  "register_google": "Google ilə davam et",
+  "register_github": "GitHub ilə davam et",
+  "register_or_email": "və ya email ilə yaradın",
+  "register_first_name": "Ad",
+  "register_first_name_placeholder": "Adınızı daxil edin",
+  "register_last_name": "Soyad",
+  "register_last_name_placeholder": "Soyadınızı daxil edin",
+  "register_username": "İstifadəçi adı",
+  "register_username_placeholder": "İstifadəçi adı seçin",
+  "register_email": "Email",
+  "register_email_placeholder": "Emailinizi daxil edin",
+  "register_password": "Şifrə",
+  "register_password_placeholder": "Şifrəni daxil edin",
+  "register_confirm_password": "Şifrəni təsdiqləyin",
+  "register_confirm_password_placeholder": "Şifrəni təsdiqləyin",
+  "register_captcha": "Zəhmət olmasa CAPTCHA doğrulamasını tamamlayın",
+  "register_select_dob": "Zəhmət olmasa doğum tarixinizi seçin",
+  "register_select_location": "Zəhmət olmasa yerləşmənizi seçin",
+  "register_select_hobbies": "Zəhmət olmasa ən azı 3 hobbini seçin",
+  "register_success": "İstifadəçi uğurla qeydiyyatdan keçdi!",
+  "register_failed": "Qeydiyyat uğursuz oldu",
+  "register_already_account": "Artıq hesabınız var?",
+  "register_signin": "Daxil ol",
+  "register_creating": "Hesab yaradılır...",
+  "register_create": "Hesab yaradın"
 }
