--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -51,5 +51,46 @@
   "login_no_account": "Hesabınız yok mu?",
   "login_create_now": "Şimdi oluştur",
   "login_title": "Sohbet Dalgası",
-  "login_success": "Kullanıcı başarıyla giriş yaptı"
+  "login_success": "Kullanıcı başarıyla giriş yaptı",
+  "register_title": "Sohbet Dalgası",
+  "register_subtitle": "Hesabını oluştur ve eşsiz platformumuza katıl.",
+  "register_step1_title": "Nerelisin?",
+  "register_step1_subtitle": "Seni yakındaki insanlarla buluşturalım",
+  "register_step2_title": "İlgi alanların neler?",
+  "register_step2_subtitle": "Deneyimini kişiselleştirmek için 3-5 ilgi alanı seç",
+  "register_step2_selected": "Seçildi: {{count}}/5 (en az 3 gerekli)",
+  "register_step2_back": "Geri",
+  "register_step2_continue": "Devam et",
+  "register_step3_title": "Doğum günün ne zaman?",
+  "register_step3_subtitle": "Yaşın seni doğru kişilerle buluşturmamıza yardımcı olacak",
+  "register_step3_label": "Doğum gününü seç",
+  "register_step3_age": "Yaş: {{age}}",
+  "register_step3_born": "Doğum tarihi: {{date}}",
+  "register_step4_title": "Hesabını oluştur",
+  "register_step4_subtitle": "Neredeyse bitti! Birkaç detay kaldı",
+  "register_google": "Google ile devam et",
+  "register_github": "GitHub ile devam et",
+  "register_or_email": "veya e-posta ile oluştur",
+  "register_first_name": "Ad",
+  "register_first_name_placeholder": "Adını gir",
+  "register_last_name": "Soyad",
+  "register_last_name_placeholder": "Soyadını gir",
+  "register_username": "Kullanıcı adı",
+  "register_username_placeholder": "Kullanıcı adı seç",
+  "register_email": "E-posta",
+  "register_email_placeholder": "E-posta adresini gir",
+  "register_password": "Şifre",
+  "register_password_placeholder": "Şifreni gir",
+  "register_confirm_password": "Şifreyi onayla",
+  "register_confirm_password_placeholder": "Şifreyi onayla",
+  "register_captcha": "Lütfen CAPTCHA doğrulamasını tamamlayın",
+  "register_select_dob": "Lütfen doğum tarihini seç",
+  "register_select_location": "Lütfen konumunu seç",
+  "register_select_hobbies": "Lütfen en az 3 hobi seç",
+  "register_success": "Kullanıcı başarıyla kaydoldu!",
+  "register_failed": "Kayıt başarısız oldu",
+  "register_already_account": "Zaten hesabın var mı?",
+  "register_signin": "Giriş yap",
+  "register_creating": "Hesap oluşturuluyor...",
+  "register_create": "Hesap oluştur"
 }
