--- a/client/src/i18n/locales/en/translation.json
+++ b/client/src/i18n/locales/en/translation.json
@@ -50,5 +50,46 @@
   "login_no_account": "Don't have an account?",
   "login_create_now": "Create one now",
   "login_title": "Chat Wave",
-  "login_success": "User successfully login"
+  "login_success": "User successfully login",
+  "register_title": "Chat Wave",
+  "register_subtitle": "Create your account and join our unique platform.",
+  "register_step1_title": "Where are you from?",
+  "register_step1_subtitle": "Help us connect you with people nearby",
+  "register_step2_title": "What are your interests?",
+  "register_step2_subtitle": "Select 3-5 interests to help us personalize your experience",
+  "register_step2_selected": "Selected: {{count}}/5 (minimum 3 required)",
+  "register_step2_back": "Back",
+  "register_step2_continue": "Continue",
+  "register_step3_title": "When's your birthday?",
+  "register_step3_subtitle": "Your age will help us connect you with the right people",
+  "register_step3_label": "Select your birthday",
+  "register_step3_age": "Age: {{age}} years old",
+  "register_step3_born": "Born on {{date}}",
+  "register_step4_title": "Create your account",
+  "register_step4_subtitle": "Almost there! Just a few more details",
+  "register_google": "Continue with Google",
+  "register_github": "Continue with GitHub",
+  "register_or_email": "or create with email",
+  "register_first_name": "First Name",
+  "register_first_name_placeholder": "Enter your first name",
+  "register_last_name": "Last Name",
+  "register_last_name_placeholder": "Enter your last name",
+  "register_username": "Username",
+  "register_username_placeholder": "Choose a username",
+  "register_email": "Email",
+  "register_email_placeholder": "Enter your email",
+  "register_password": "Password",
+  "register_password_placeholder": "Enter password",
+  "register_confirm_password": "Confirm Password",
+  "register_confirm_password_placeholder": "Confirm password",
+  "register_captcha": "Please complete the CAPTCHA verification",
+  "register_select_dob": "Please select your date of birth",
+  "register_select_location": "Please select your location",
+  "register_select_hobbies": "Please select at least 3 hobbies",
+  "register_success": "User registered successfully!",
+  "register_failed": "Registration failed",
+  "register_already_account": "Already have an account?",
+  "register_signin": "Sign In",
+  "register_creating": "Creating Account...",
+  "register_create": "Create Account"
 }
