--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -50,5 +50,46 @@
   "login_no_account": "Нет аккаунта?",
   "login_create_now": "Создать сейчас",
   "login_title": "Чат Волна",
-  "login_success": "Пользователь успешно вошел"
+  "login_success": "Пользователь успешно вошел",
+  "register_title": "Чат Волна",
+  "register_subtitle": "Создайте аккаунт и присоединяйтесь к нашей уникальной платформе.",
+  "register_step1_title": "Откуда вы?",
+  "register_step1_subtitle": "Помогите нам связать вас с людьми поблизости",
+  "register_step2_title": "Какие у вас интересы?",
+  "register_step2_subtitle": "Выберите 3-5 интересов для персонализации вашего опыта",
+  "register_step2_selected": "Выбрано: {{count}}/5 (минимум 3)",
+  "register_step2_back": "Назад",
+  "register_step2_continue": "Продолжить",
+  "register_step3_title": "Когда ваш день рождения?",
+  "register_step3_subtitle": "Ваш возраст поможет нам связать вас с нужными людьми",
+  "register_step3_label": "Выберите дату рождения",
+  "register_step3_age": "Возраст: {{age}} лет",
+  "register_step3_born": "Дата рождения: {{date}}",
+  "register_step4_title": "Создайте аккаунт",
+  "register_step4_subtitle": "Почти готово! Осталось несколько деталей",
+  "register_google": "Продолжить с Google",
+  "register_github": "Продолжить с GitHub",
+  "register_or_email": "или создать с помощью email",
+  "register_first_name": "Имя",
+  "register_first_name_placeholder": "Введите ваше имя",
+  "register_last_name": "Фамилия",
+  "register_last_name_placeholder": "Введите вашу фамилию",
+  "register_username": "Имя пользователя",
+  "register_username_placeholder": "Выберите имя пользователя",
+  "register_email": "Электронная почта",
+  "register_email_placeholder": "Введите вашу почту",
+  "register_password": "Пароль",
+  "register_password_placeholder": "Введите пароль",
+  "register_confirm_password": "Подтвердите пароль",
+  "register_confirm_password_placeholder": "Подтвердите пароль",
+  "register_captcha": "Пожалуйста, пройдите проверку CAPTCHA",
+  "register_select_dob": "Пожалуйста, выберите дату рождения",
+  "register_select_location": "Пожалуйста, выберите местоположение",
+  "register_select_hobbies": "Пожалуйста, выберите минимум 3 хобби",
+  "register_success": "Пользователь успешно зарегистрирован!",
+  "register_failed": "Ошибка регистрации",
+  "register_already_account": "Уже есть аккаунт?",
+  "register_signin": "Войти",
+  "register_creating": "Создание аккаунта...",
+  "register_create": "Создать аккаунт"
 }
