feat(i18n): Added i18n translations for Feed' page.

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -91,5 +91,28 @@
   "register_already_account": "Artıq hesabınız var?",
   "register_signin": "Daxil ol",
   "register_creating": "Hesab yaradılır...",
-  "register_create": "Hesab yaradın"
+  "register_create": "Hesab yaradın",
+  "feed_discover_title": "İnsanları kəşf et",
+  "feed_discover_subtitle": "Digər istifadəçiləri tap və əlaqə qur",
+  "feed_create_group": "Qrup yarat",
+  "feed_tab_discover": "Kəşf et",
+  "feed_tab_trending": "Trend",
+  "feed_tab_nearby": "Yaxındakılar",
+  "feed_search_placeholder": "İstifadəçiləri axtar...",
+  "feed_filters": "Filtrlər",
+  "feed_loading": "İstifadəçilər yüklənir...",
+  "feed_connected": "Əlaqədədir",
+  "feed_pending": "Gözləyir",
+  "feed_connect": "Əlaqə qur",
+  "feed_message": "Mesaj",
+  "feed_no_users": "İstifadəçi tapılmadı",
+  "feed_no_users_sub": "Axtarış kriteriyalarını dəyiş və ya sonra yenidən yoxla.",
+  "feed_connections": "{{count}} əlaqə",
+  "sidebar_title_main": "Chat ",
+  "sidebar_title_accent": "Wave",
+  "sidebar_feed": "Feed",
+  "sidebar_chat": "Çat",
+  "sidebar_profile": "Profil",
+  "sidebar_settings": "Ayarlar",
+  "sidebar_logout": "Çıxış"
 }
