--- a/client/src/i18n/locales/en/translation.json
+++ b/client/src/i18n/locales/en/translation.json
@@ -91,5 +91,28 @@
   "register_already_account": "Already have an account?",
   "register_signin": "Sign In",
   "register_creating": "Creating Account...",
-  "register_create": "Create Account"
+  "register_create": "Create Account",
+  "feed_discover_title": "Discover People",
+  "feed_discover_subtitle": "Find and connect with other users",
+  "feed_create_group": "Create Group",
+  "feed_tab_discover": "Discover",
+  "feed_tab_trending": "Trending",
+  "feed_tab_nearby": "Nearby",
+  "feed_search_placeholder": "Search for users...",
+  "feed_filters": "Filters",
+  "feed_loading": "Loading users...",
+  "feed_connected": "Connected",
+  "feed_pending": "Pending",
+  "feed_connect": "Connect",
+  "feed_message": "Message",
+  "feed_no_users": "No users found",
+  "feed_no_users_sub": "Try adjusting your search criteria or check back later.",
+  "feed_connections": "{{count}} connections",
+  "sidebar_title_main": "Chat ",
+  "sidebar_title_accent": "Wave",
+  "sidebar_feed": "Feed",
+  "sidebar_chat": "Chat",
+  "sidebar_profile": "Profile",
+  "sidebar_settings": "Settings",
+  "sidebar_logout": "Logout"
 }
