--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -91,5 +91,28 @@
   "register_already_account": "Уже есть аккаунт?",
   "register_signin": "Войти",
   "register_creating": "Создание аккаунта...",
-  "register_create": "Создать аккаунт"
+  "register_create": "Создать аккаунт",
+  "feed_discover_title": "Откройте людей",
+  "feed_discover_subtitle": "Найдите и свяжитесь с другими пользователями",
+  "feed_create_group": "Создать группу",
+  "feed_tab_discover": "Открыть",
+  "feed_tab_trending": "В тренде",
+  "feed_tab_nearby": "Рядом",
+  "feed_search_placeholder": "Поиск пользователей...",
+  "feed_filters": "Фильтры",
+  "feed_loading": "Загрузка пользователей...",
+  "feed_connected": "Подключено",
+  "feed_pending": "В ожидании",
+  "feed_connect": "Подключиться",
+  "feed_message": "Сообщение",
+  "feed_no_users": "Пользователи не найдены",
+  "feed_no_users_sub": "Попробуйте изменить критерии поиска или зайдите позже.",
+  "feed_connections": "{{count}} подключений",
+  "sidebar_title_main": "Чат ",
+  "sidebar_title_accent": "Волна",
+  "sidebar_feed": "Лента",
+  "sidebar_chat": "Чат",
+  "sidebar_profile": "Профиль",
+  "sidebar_settings": "Настройки",
+  "sidebar_logout": "Выйти"
 }
