--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -92,5 +92,28 @@
   "register_already_account": "Zaten hesabın var mı?",
   "register_signin": "Giriş yap",
   "register_creating": "Hesap oluşturuluyor...",
-  "register_create": "Hesap oluştur"
+  "register_create": "Hesap oluştur",
+  "feed_discover_title": "Kişileri keşfet",
+  "feed_discover_subtitle": "Diğer kullanıcıları bul ve bağlantı kur",
+  "feed_create_group": "Grup oluştur",
+  "feed_tab_discover": "Keşfet",
+  "feed_tab_trending": "Trend",
+  "feed_tab_nearby": "Yakındakiler",
+  "feed_search_placeholder": "Kullanıcıları ara...",
+  "feed_filters": "Filtreler",
+  "feed_loading": "Kullanıcılar yükleniyor...",
+  "feed_connected": "Bağlandı",
+  "feed_pending": "Beklemede",
+  "feed_connect": "Bağlan",
+  "feed_message": "Mesaj",
+  "feed_no_users": "Kullanıcı bulunamadı",
+  "feed_no_users_sub": "Arama kriterlerini değiştir veya daha sonra tekrar dene.",
+  "feed_connections": "{{count}} bağlantı",
+  "sidebar_title_main": "Sohbet ",
+  "sidebar_title_accent": "Dalgası",
+  "sidebar_feed": "Akış",
+  "sidebar_chat": "Sohbet",
+  "sidebar_profile": "Profil",
+  "sidebar_settings": "Ayarlar",
+  "sidebar_logout": "Çıkış"
 }
