feat(i18n): Added i18n translations for profile page

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -106,7 +106,7 @@
   "feed_connect": "Əlaqə qur",
   "feed_message": "Mesaj",
   "feed_no_users": "İstifadəçi tapılmadı",
-  "feed_no_users_sub": "Axtarış kriteriyalarını dəyiş və ya sonra yenidən yoxla.",
+  "feed_no_users_sub": "Axtarışa uyğun istifadəçi yoxdur.",
   "feed_connections": "{{count}} əlaqə",
   "sidebar_title_main": "Chat ",
   "sidebar_title_accent": "Wave",
@@ -114,5 +114,125 @@
   "sidebar_chat": "Çat",
   "sidebar_profile": "Profil",
   "sidebar_settings": "Ayarlar",
-  "sidebar_logout": "Çıxış"
+  "sidebar_logout": "Çıxış",
+  "chat_login_to_view": "Çatlara baxmaq üçün daxil olun",
+  "chat_failed_to_load": "Çatları yükləmək mümkün olmadı",
+  "chat_created_success": "Çat uğurla yaradıldı!",
+  "chat_failed_to_create": "Çat yaratmaq mümkün olmadı",
+  "chat_failed_to_load_messages": "Mesajları yükləmək mümkün olmadı",
+  "chat_connection_error": "Bağlantı xətası baş verdi",
+  "chat_failed_to_send": "Mesaj göndərmək mümkün olmadı",
+  "chat_loading": "Çatlar yüklənir...",
+  "chat_messages": "Mesajlar",
+  "chat_search_conversations": "Söhbətləri axtar...",
+  "chat_no_chats": "Mövcud çat yoxdur",
+  "chat_start_conversation": "Əlaqələrinizlə söhbətə başlayın!",
+  "chat_view_connections": "Əlaqələri göstər",
+  "chat_unknown": "Naməlum",
+  "chat_no_messages_yet": "Hələ mesaj yoxdur",
+  "chat_members_count": "Üzvlər: {{count}}",
+  "chat_typing": "yazır...",
+  "chat_no_messages_yet_start": "Hələ mesaj yoxdur. Söhbətə başlayın!",
+  "chat_type_message": "Mesaj yazın...",
+  "chat_send_message": "Mesaj göndər",
+  "chat_select_conversation": "Söhbət seçin",
+  "chat_choose_sidebar": "Mesajlaşmaq üçün yan paneldən çat seçin",
+  "chat_start_new_chat": "Yeni çat başlat",
+  "chat_choose_connection": "Söhbətə başlamaq üçün əlaqə seçin",
+  "chat_no_connections": "Əlaqə yoxdur",
+  "chat_connect_with_users": "Çat başlatmaq üçün digər istifadəçilərlə əlaqə qurun!",
+  "chat_exists_click_open": "Çat mövcuddur — açmaq üçün klikləyin",
+  "chat_click_start": "Çat başlatmaq üçün klikləyin",
+  "chat_cancel": "Ləğv et",
+  "profile_loading": "Profil yüklənir...",
+  "profile_title": "Profil",
+  "profile_uploading": "Yüklənir...",
+  "profile_change_photo": "Şəkli dəyiş",
+  "profile_removing": "Silinir...",
+  "profile_remove_photo": "Şəkli sil",
+  "profile_no_bio": "Bio yoxdur",
+  "profile_no_location": "Məkan seçilməyib",
+  "profile_joined": "Qoşuldu",
+  "profile_connections": "Əlaqələr",
+  "profile_active_chats": "Aktiv çatlar",
+  "profile_failed_to_load": "Profil məlumatları yüklənmədi",
+  "profile_invalid_image": "Zəhmət olmasa düzgün şəkil seçin (JPEG, PNG, GIF)",
+  "profile_image_size_error": "Şəkil ölçüsü 5MB-dan az olmalıdır",
+  "profile_image_updated": "Profil şəkli uğurla yeniləndi!",
+  "profile_failed_upload_image": "Şəkil yüklənmədi. Yenidən cəhd edin.",
+  "profile_image_deleted": "Profil şəkli silindi!",
+  "profile_failed_delete_image": "Şəkil silinmədi. Yenidən cəhd edin.",
+  "overview": "İcmal",
+  "settings": "Ayarlar",
+  "privacy": "Gizlilik",
+  "account": "Hesab",
+  "quick_actions": "Sürətli Əməliyyatlar",
+  "connection_requests": "Əlaqə Sorğuları",
+  "new_chat": "Yeni Çat",
+  "find_friends": "Dostları tap",
+  "preferences": "Tərcihlər",
+  "switch_light_dark_themes": "İşıq və qaranlıq rejimlər arasında keçid edin",
+  "switch_to_dark": "Qaranlıq rejimə keçid",
+  "switch_to_light": "İşıq rejiminə keçid",
+  "appearance": "Görünüş",
+  "language": "Dil",
+  "Language_Region": "Dil və Region",
+  "settings_language_region": "Dil və Region",
+  "settings_language_us": "ABŞ",
+  "settings_language_en": "İngilis",
+  "settings_language_az": "AZ",
+  "settings_language_az_full": "Azərbaycan",
+  "settings_language_ru": "RU",
+  "settings_language_ru_full": "Rus",
+  "settings_language_tr": "TR",
+  "settings_language_tr_full": "Türk",
+  "settings_appearance": "Görünüş",
+  "settings_dark_mode": "Qaranlıq rejim",
+  "settings_dark_mode_description": "İşıq və qaranlıq mövzular arasında keçid edin",
+  "settings_notifications": "Bildirişlər",
+  "settings_message_notifications": "Mesaj bildirişləri",
+  "settings_message_notifications_desc": "Yeni mesaj aldıqda bildiriş alın",
+  "settings_connection_requests": "Əlaqə sorğuları",
+  "settings_connection_requests_desc": "Kimsə əlaqə qurmaq istədikdə bildiriş alın",
+  "settings_app_updates": "Tətbiq yeniləmələri",
+  "settings_app_updates_desc": "Yeni funksiyalar və yeniləmələr barədə bildiriş alın",
+  "overview_total_messages": "Ümumi mesajlar",
+  "overview_connections": "Əlaqələr",
+  "overview_favorites": "Seçilmişlər",
+  "overview_sent_connection_request": "Sizə əlaqə sorğusu göndərdi",
+  "reject": "Rədd et",
+  "accept": "Təsdiqlə",
+  "privacy_settings": "Gizlilik ayarları",
+  "profile_visibility": "Profilin görünürlüğü",
+  "control_who_can_see_profile": "Profilinizi kimlərin görə biləcəyini seçin",
+  "public": "Hamı üçün açıq",
+  "friends_only": "Yalnız dostlar",
+  "private": "Gizli",
+  "message_privacy": "Mesaj gizliliyi",
+  "control_who_can_send_messages": "Kimlərin sizə mesaj göndərə biləcəyini seçin",
+  "everyone": "Hamı",
+  "no_one": "Heç kim",
+  "danger_zone": "Təhlükəli zona",
+  "delete_account": "Hesabı sil",
+  "delete_account_confirmation": "Hesabınızı silmək istədiyinizə əminsiniz? Bu əməliyyat geri alınmaz.",
+  "delete_account_warning": "Hesabınızı sildikdən sonra məlumatlarınıza və çatlarınıza giriş əldə edə bilməyəcəksiniz.",
+  "delete_account_success": "Hesabınız uğurla silindi. Ümid edirik ki, yenidən görüşərik!",
+  "delete_account_failed": "Hesab silinmədi. Yenidən cəhd edin.",
+  "delete_account_button": "Hesabı sil",
+  "delete_account_loading": "Hesab silinir...",
+  "delete_account_cancel": "Ləğv et",
+  "delete_account_back": "Geri dön",
+  "sign_out": "Çıxış et",
+  "sign_out_description": "Cari sessiyadan çıxış edin",
+  "sign_out_success": "Uğurla çıxış etdiniz",
+  "sign_out_failed": "Çıxış uğursuz oldu. Yenidən cəhd edin.",
+  "sign_out_button": "Çıxış et",
+  "sign_out_loading": "Çıxış edilir...",
+  "sign_out_cancel": "Ləğv et",
+  "delete_account_chat_history": "Bütün çat tarixçəniz silinəcək",
+  "delete_account_data": "Bütün hesab məlumatlarınız silinəcək",
+  "delete_account_groups": "Bütün qruplarınızdan çıxacaqsınız",
+  "delete_account_recovery": "Hesab bərpa edilə bilməyəcək",
+  "delete_account_profile_info": "Profil və şəxsi məlumatlarınız silinəcək",
+  "delete_account_no_recovery": "Hesab silindikdən sonra bərpa edilə bilməz"
 }
