--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -106,7 +106,7 @@
   "feed_connect": "Подключиться",
   "feed_message": "Сообщение",
   "feed_no_users": "Пользователи не найдены",
-  "feed_no_users_sub": "Попробуйте изменить критерии поиска или зайдите позже.",
+  "feed_no_users_sub": "Нет пользователей, соответствующих вашему поиску.",
   "feed_connections": "{{count}} подключений",
   "sidebar_title_main": "Чат ",
   "sidebar_title_accent": "Волна",
@@ -114,5 +114,96 @@
   "sidebar_chat": "Чат",
   "sidebar_profile": "Профиль",
   "sidebar_settings": "Настройки",
-  "sidebar_logout": "Выйти"
+  "sidebar_logout": "Выйти",
+  "chat_login_to_view": "Пожалуйста, войдите, чтобы просматривать чаты",
+  "chat_failed_to_load": "Не удалось загрузить чаты",
+  "chat_created_success": "Чат успешно создан!",
+  "chat_failed_to_create": "Не удалось создать чат",
+  "chat_failed_to_load_messages": "Не удалось загрузить сообщения",
+  "chat_connection_error": "Произошла ошибка соединения",
+  "chat_failed_to_send": "Не удалось отправить сообщение",
+  "chat_loading": "Загрузка чатов...",
+  "chat_messages": "Сообщения",
+  "chat_search_conversations": "Поиск бесед...",
+  "chat_no_chats": "Нет доступных чатов",
+  "chat_start_conversation": "Начните беседу с вашими контактами!",
+  "chat_view_connections": "Посмотреть контакты",
+  "chat_unknown": "Неизвестно",
+  "chat_no_messages_yet": "Пока нет сообщений",
+  "chat_members_count": "Участников: {{count}}",
+  "chat_typing": "печатает...",
+  "chat_no_messages_yet_start": "Пока нет сообщений. Начните беседу!",
+  "chat_type_message": "Введите сообщение...",
+  "chat_send_message": "Отправить сообщение",
+  "chat_select_conversation": "Выберите беседу",
+  "chat_choose_sidebar": "Выберите чат в боковой панели, чтобы начать переписку",
+  "chat_start_new_chat": "Начать новый чат",
+  "chat_choose_connection": "Выберите контакт для начала беседы",
+  "chat_no_connections": "Нет контактов",
+  "chat_connect_with_users": "Свяжитесь с другими пользователями, чтобы начать чат!",
+  "chat_exists_click_open": "Чат уже существует — нажмите, чтобы открыть",
+  "chat_click_start": "Нажмите, чтобы начать чат",
+  "chat_cancel": "Отмена",
+  "profile_loading": "Загрузка профиля...",
+  "profile_title": "Профиль",
+  "profile_uploading": "Загрузка...",
+  "profile_change_photo": "Сменить фото",
+  "profile_removing": "Удаление...",
+  "profile_remove_photo": "Удалить фото",
+  "profile_no_bio": "Биография отсутствует",
+  "profile_no_location": "Местоположение не указано",
+  "profile_joined": "Присоединился",
+  "profile_connections": "Связи",
+  "profile_active_chats": "Активные чаты",
+  "profile_failed_to_load": "Не удалось загрузить данные профиля",
+  "profile_invalid_image": "Пожалуйста, выберите корректный файл изображения (JPEG, PNG, GIF)",
+  "profile_image_size_error": "Размер изображения должен быть меньше 5MB",
+  "profile_image_updated": "Фото профиля успешно обновлено!",
+  "profile_failed_upload_image": "Не удалось загрузить изображение. Попробуйте снова.",
+  "profile_image_deleted": "Фото профиля удалено!",
+  "profile_failed_delete_image": "Не удалось удалить изображение. Попробуйте снова.",
+  "overview": "Обзор",
+  "settings": "Настройки",
+  "privacy": "Конфиденциальность",
+  "account": "Аккаунт",
+  "connection_requests": "Запросы на подключение",
+  "accept": "Принять",
+  "reject": "Отклонить",
+  "new_chat": "Новый чат",
+  "find_friends": "Найти друзей",
+  "preferences": "Настройки",
+  "settings_language_region": "Язык и регион",
+  "settings_language_us": "США",
+  "settings_language_en": "Английский",
+  "settings_language_az": "AZ",
+  "settings_language_az_full": "Азербайджанский",
+  "settings_language_ru": "RU",
+  "settings_language_ru_full": "Русский",
+  "settings_language_tr": "TR",
+  "settings_language_tr_full": "Турецкий",
+  "settings_appearance": "Внешний вид",
+  "settings_dark_mode": "Темный режим",
+  "settings_dark_mode_description": "Переключение между светлой и темной темой",
+  "settings_notifications": "Уведомления",
+  "settings_message_notifications": "Уведомления о сообщениях",
+  "settings_message_notifications_desc": "Получайте уведомления о новых сообщениях",
+  "settings_connection_requests": "Запросы на подключение",
+  "settings_connection_requests_desc": "Получайте уведомления, когда кто-то хочет подключиться",
+  "settings_app_updates": "Обновления приложения",
+  "settings_app_updates_desc": "Получайте уведомления о новых функциях и обновлениях",
+  "overview_total_messages": "Всего сообщений",
+  "overview_connections": "Связи",
+  "overview_favorites": "Избранное",
+  "overview_sent_connection_request": "Отправил вам запрос на подключение",
+  "quick_actions": "Быстрые действия",
+  "privacy_settings": "Настройки конфиденциальности",
+  "profile_visibility": "Видимость профиля",
+  "control_who_can_see_profile": "Управляйте, кто может видеть ваш профиль",
+  "public": "Публичный",
+  "friends_only": "Только друзья",
+  "private": "Приватный",
+  "message_privacy": "Конфиденциальность сообщений",
+  "control_who_can_send_messages": "Управляйте, кто может отправлять вам сообщения",
+  "everyone": "Все",
+  "no_one": "Никто"
 }
